--- a/index.css
+++ b/index.css
@@ -642,6 +642,14 @@ video {
   margin-top: 1.25rem;
 }
 
+.-ml-16 {
+  margin-left: -4rem;
+}
+
+.mb-24 {
+  margin-bottom: 6rem;
+}
+
 .block {
   display: block;
 }
@@ -710,8 +718,8 @@ video {
   table-layout: auto;
 }
 
-.border-separate {
-  border-collapse: separate;
+.border-collapse {
+  border-collapse: collapse;
 }
 
 .border-spacing-x-8 {
@@ -853,6 +861,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -860,6 +873,22 @@ video {
 
 .pl-16 {
   padding-left: 4rem;
+}
+
+.pl-8 {
+  padding-left: 2rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
+}
+
+.pr-8 {
+  padding-right: 2rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
 }
 
 .text-left {
@@ -983,6 +1012,10 @@ video {
   transition-timing-function: linear;
 }
 
+.hover\:rounded-md:hover {
+  border-radius: 0.375rem;
+}
+
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -996,6 +1029,11 @@ video {
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-700:hover {
@@ -1068,6 +1106,15 @@ video {
     padding-bottom: 1rem;
   }
 
+  .md\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .md\:pl-16 {
+    padding-left: 4rem;
+  }
+
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1113,6 +1160,14 @@ video {
     margin-bottom: 0px;
   }
 
+  .lg\:inline {
+    display: inline;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -1128,9 +1183,21 @@ video {
   .lg\:pl-8 {
     padding-left: 2rem;
   }
+
+  .lg\:pl-16 {
+    padding-left: 4rem;
+  }
 }
 
 @media (min-width: 1280px) {
+  .xl\:inline {
+    display: inline;
+  }
+
+  .xl\:hidden {
+    display: none;
+  }
+
   .xl\:w-28 {
     width: 7rem;
   }
